add resident deletion, issue rejection, and house contacts
